Edited build deploy infra job

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           pytest Lambda/test*
 
   build-and-deploy-infra:
-    needs: test-infra
+    needs: lambda_tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -46,7 +46,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: eu-west-2 # OR eu-west-2?????????
+          aws-region: us-east-1 # keys are not region specific
       - run: sam build
         #working-directory: cloud-resume-challenge
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset # not going to ask questions as we can't answer them from here / we don't want to fail it when there is no changes
